hw6_lab10/tests/errors/sem_null_assign_nonnullable.kt
// EXPECT: semantic error — assigning null to non-nullable after declaration
fun main() {
    var s: String = "hello"
    s = null
}
